<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/view">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_display_grid"
            android:summary="@string/summary_display_in_grid"
            android:title="@string/disply_in_grid" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/default_name"
            android:key="@string/preference_display_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/summary_display_name"
            android:title="@string/display_name" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Actions">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_display_show_hide_username"
            android:summaryOff="Show Username"
            android:summaryOn="Hide Username"
            android:title="@string/display_show_hide_username" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="Select Theme"
            android:entries="@array/listentries"
            android:entryValues="@array/listvalues"
            android:icon="@android:drawable/ic_menu_edit"
            android:key="@string/preference_list_theme_colors"
            android:persistent="true"
            android:summary="@string/summary_theme_choose"
            android:title="@string/display_theme_choose" />
    </PreferenceCategory>

</PreferenceScreen>